--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
                 <div class="mt-8 flex flex-col justify-center items-center">
   
                   <img class="w-3/4 sm:w-2/4" src="assets/banner.png" alt="house-sketch">
-                  <h1 class="font-extrabold text-3xl text-center my-4 sm:my-6 sm:w-4/5 sm:text-7xl">A barn house of this design  has a striking appearance</h1>
+                  <h1 class="font-extrabold text-3xl text-center my-4 sm:my-6 sm:w-4/5 sm:text-7xl" style="-webkit-text-stroke: 1px;">A barn house of this design  has a striking appearance</h1>
                   <p class="text-center font-medium text-sm text-[#494949] mb-5 sm:text-base sm:mb-8 sm:w-3/4">
                     The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.
                   </p>
-                  <button class="btn rounded-full bg-color-primary/[.5] font-bold text-xl w-full mb-24 sm:w-auto sm:px-5 sm:py-8 ">View Details <i class="fa-solid fa-arrow-up-long w-8 h-8  flex justify-center items-center text-black bg-color-primary rounded-full rotate-45"></i></button>
+                  <button class="btn rounded-full bg-color-primary/[.5] font-bold text-xl w-full sm:mb-24 sm:w-auto sm:px-5">View Details <i class="fa-solid fa-arrow-up-long w-8 h-8  flex justify-center items-center text-black bg-color-primary rounded-full rotate-45"></i></button>
                 </div>
 
         </div>
@@ -125,6 +125,49 @@
    
 
     <main>
+
+        <section class="bg-[#F4F4F4]">
+
+          <div class="mt-8 w-11/12 mx-auto flex justify-center items-center flex-col sm:flex-row ">
+
+            <div class="flex justify-center items-center sm:items-start flex-col sm:my-24 relative">
+              <img src="assets/Vector.png" alt="spiral-arrow" class="absolute top-[-2rem] left-[-2rem] hidden sm:inline">
+              <button class="btn rounded-full bg-white font-bold text-base mt-8"> <i class="fa-solid fa-arrow-right-long"></i>About Us</i></button>
+              <h1 class="font-bold text-2xl text-center sm:text-left text-[#212121] my-4 sm:text-4xl sm:w-3/5" style="-webkit-text-stroke: 1px;">We design thoughtful, liveable spaces</h1>
+              <p class="text-center font-medium text-sm text-[#494949] mb-6 sm:text-left sm:w-3/5">The barn house captivates with its blend of rustic charm and  modern sophistication, featuring weathered wood, sleek metal accents.</p>
+              <div class="flex p-5 card-side px-6 bg-base-100 rounded-2xl mb-4 sm:mr-8">
+               <figure class="flex items-start sm:items-center min-w-10">
+                 <img
+                   src="assets/commercial.png"
+                   alt="commercial" />
+               </figure>
+               <div class="card-body p-0 pl-4">
+                 <h2 class="card-title font-extrabold text-base text-[#494949]">Commercial</h2>
+                 <p class="font-medium text-base text-[#737373]">The barn house captivates with its blend of rustic charm and modern.</p>
+               </div>
+              </div>
+              <div class="flex p-5 card-side px-6 bg-base-100 rounded-2xl mb-6 sm:mr-8">
+              <figure class="flex items-start sm:items-center min-w-10">
+                <img
+                  src="assets/residential.png"
+                  alt="Residential" />
+              </figure>
+              <div class="card-body p-0 pl-4">
+                <h2 class="card-title font-extrabold text-base text-[#494949]">Residential</h2>
+                <p class="font-medium text-base text-[#737373]">The barn house captivates with its blend of rustic charm and modern.</p>
+              </div>
+              </div>
+            </div>
+            
+            <img src="assets/Rectangle.png" alt="building" class="box-border object-cover w-full h-56 rounded-2xl sm:w-auto sm:h-auto sm:object-scale-down">
+
+
+          </div>
+
+        
+
+        </section>
+
 
     </main>
 
