Added work process section

--- a/index.html
+++ b/index.html
@@ -35,22 +35,6 @@
                 'color-primary': '#ABEF5F',
               }
             }, 
-            // screens: {
-            //   '2xl': {'max': '2560px'},
-            //   // => @media (max-width: 1535px) { ... }
-
-            //   'xl': {'max': '1400px'},
-            //   // => @media (max-width: 1279px) { ... }
-
-            //   'lg': {'max': '1024px'},
-            //   // => @media (max-width: 1023px) { ... }
-
-            //   'md': {'max': '768px'},
-            //   // => @media (max-width: 767px) { ... }
-
-            //   'sm': {'max': '575px'},
-            //   // => @media (max-width: 639px) { ... }
-            // },
           }
         }
     </script>
@@ -166,6 +150,77 @@
 
         
 
+        </section>
+
+
+        <section  class="bg-[#F4F4F4]">
+
+          <div class="w-11/12 mx-auto flex justify-center items-center flex-col ">
+
+            <button class="btn rounded-full bg-white font-bold text-base mt-8"> <i class="fa-solid fa-arrow-right-long"></i>How we works</i></button>
+            <h1 class="font-bold text-xl text-[#212121] my-4 sm:text-4xl" style="-webkit-text-stroke: 1px;" >Our Works Process</h1>
+            <p class="font-medium text-sm text-[#494949] text-center mb-6 sm:max-w-2xl">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+          
+            <div class="sm:flex sm:gap-6">
+
+              <div class="bg-base-100 p-6 rounded-2xl bg-[#E7C1D3] mb-4 max-w-80 sm:max-w-72 mx-auto 2xl:w-full">
+                <figure class="flex items-center justify-start">
+                  <img
+                    src="assets/concept.png"
+                    alt="concept"
+                    class="rounded-xl" />
+                </figure>
+                <div class="card-body text-left p-0">
+                  <h2 class="card-title text-left font-extrabold text-lg text-[#1C1C1C] mt-2">Concept</h2>
+                  <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                </div>
+              </div>
+  
+              <div class="bg-base-100 p-6 rounded-2xl bg-[#EFDA6E] mb-4 max-w-80 sm:max-w-72 mx-auto">
+                <figure class="flex items-center justify-start">
+                  <img
+                    src="assets/flow-chart.png"
+                    alt="concept"
+                    class="rounded-xl" />
+                </figure>
+                <div class="card-body text-left p-0">
+                  <h2 class="card-title text-left font-extrabold text-lg text-[#1C1C1C] mt-2">Design Process</h2>
+                  <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                </div>
+              </div>
+  
+              <div class="bg-base-100 p-6 rounded-2xl bg-[#A4DAC3] mb-4 max-w-80 sm:max-w-72 mx-auto">
+                <figure class="flex items-center justify-start">
+                  <img
+                    src="assets/vision.png"
+                    alt="concept"
+                    class="rounded-xl" />
+                </figure>
+                <div class="card-body text-left p-0">
+                  <h2 class="card-title text-left font-extrabold text-lg text-[#1C1C1C] mt-2">Supervision</h2>
+                  <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                </div>
+              </div>
+  
+              <div class="bg-base-100 p-6 rounded-2xl bg-[#77AAEA] mb-4 max-w-80 sm:max-w-72 mx-auto">
+                <figure class="flex items-center justify-start">
+                  <img
+                    src="assets/budget-planning.png"
+                    alt="concept"
+                    class="rounded-xl" />
+                </figure>
+                <div class="card-body text-left p-0">
+                  <h2 class="card-title text-left font-extrabold text-lg text-[#1C1C1C] mt-2">Budget Planning</h2>
+                  <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                </div>
+              </div>
+
+            </div>
+
+
+
+
+          </div>
         </section>
 
 
