Added Project form section

--- a/index.html
+++ b/index.html
@@ -217,10 +217,35 @@
 
             </div>
 
+          </div>
+        </section>
 
 
+        <section class="bg-[url('assets/bg.jpg')] bg-cover bg-no-repeat mt-1">
+
+          <div class="w-11/12 mx-auto flex justify-center items-center flex-col sm:w-8/12">
+
+            <button class="btn rounded-full bg-[#ABEF5F]/[.2] font-bold text-base mt-8 border-none sm:mt-24"> <i class="fa-solid fa-arrow-right-long"></i>Let's Connect</i></button>
+            <h1 class="font-bold text-2xl text-[#212121] my-4 w-4/5 text-center sm:text-5xl" style="-webkit-text-stroke: 1px;" >Let's Discuss Next Project</h1>
+            <p class="font-medium text-sm text-[#494949] text-center mb-6 sm:max-w-2xl sm:text-base sm:my-8">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+
+            <form action="#" class="mb-4 w-full sm:grid sm:grid-cols-2 gap-x-6">
+
+              <input type="text" placeholder="First Name*" class="input w-full rounded-full p-4 mb-5" />
+              <input type="text" placeholder="Last Name*" class="input w-full rounded-full p-4 mb-5" />
+              <input type="number" placeholder="Phone Number*" class="input w-full rounded-full p-4 mb-5" />
+              <input type="email" placeholder="Email Number*" class="input w-full rounded-full p-4 mb-5" />
+
+              <textarea placeholder="Write your message here" class="input w-full rounded-2xl p-4 mb-5 min-h-60 col-span-2"></textarea>
+              
+              <submit class="btn btn-lg rounded-full bg-color-primary font-bold text-xl w-full sm:mb-24 sm:w-auto sm:px-5 col-span-2">Send Mail<i class="fa-solid fa-arrow-up-long w-8 h-8  flex justify-center items-center text-white bg-black rounded-full rotate-45"></i></submit>
+
+            </form>
+
+            
 
           </div>
+
         </section>
 
 
