upadated portfolio section

--- a/index.html
+++ b/index.html
@@ -220,25 +220,25 @@
           </div>
         </section>
 
-
-        <section class="bg-[#F4F4F4]">
-          <div class="w-11/12 mx-auto flex justify-center items-center flex-col sm:w-8/12">
+        <!-- portfolio section -->
+        <section class="bg-[#F4F4F4] sm:bg-white">
+          <div class="w-11/12 mx-auto flex justify-center items-center flex-col">
 
             <button class="btn rounded-full bg-[#ABEF5F]/[.2] font-bold text-base mt-8 border-none sm:mt-24"> <i class="fa-solid fa-arrow-right-long"></i>Explore our Latest works</i></button>
             <h1 class="font-bold text-2xl text-[#212121] my-4 w-4/5 text-center sm:text-5xl" style="-webkit-text-stroke: 1px;" >Our Latest Portfolio</h1>
             <p class="font-medium text-sm text-[#494949] text-center mb-6 sm:max-w-2xl sm:text-base sm:my-8">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
 
 
-              <div class="sm:grid sm:grid-cols-3 sm:gap-x-4">
+              <div class="sm:grid sm:grid-cols-5 sm:grid-rows-2 sm:gap-x-4">
 
-                <div class="bg-base-100 rounded-2xl mb-4 sm:flex sm:col-start-1	sm:col-end-3	">
+                <div class="bg-base-100 rounded-2xl mb-4 sm:flex sm:col-span-3 border	">
                   <figure class="px-8 pt-10 sm:py-4">
                     <img
                       src="assets/img1.png"
                       alt="Shoes"
                       class="rounded-xl w-full sm:h-full" />
                   </figure>
-                  <div class="card-body items-left text-center sm:flex sm:w-1/2 sm:py-4 sm:justify-between">
+                  <div class="card-body items-left text-center sm:flex sm:w-1/2 sm:p-0 sm:py-4 sm:justify-evenly sm:pr-4">
                     <h2 class="card-title font-extrabold text-xl text-left">Commercial</h2>
                     <p class="text-left font-medium text-base text-[#737373] sm:flex-grow-0 ">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern.</p>
                     <div class="flex justify-start items-center">
@@ -248,34 +248,34 @@
                 </div>
 
 
-                <div class="bg-base-100 rounded-2xl mb-4">
+                <div class="bg-base-100 rounded-2xl mb-4 sm:col-span-2 sm:col-start-4 border">
                   <figure class="p-4">
                     <img
                       src="assets/img2.png"
                       alt="home"
-                      class="rounded-xl w-full sm:w-auto" />
+                      class="rounded-xl w-full sm:w-full" />
                   </figure>
                 </div>
 
 
-                <div class="bg-base-100 rounded-2xl mb-4 w-full">
-                  <figure class="p-4">
+                <div class="bg-base-100 rounded-2xl mb-4 w-full  sm:col-start-5 sm:row-start-2  border">
+                  <figure class="p-4 sm:h-full">
                     <img
                       src="assets/img5.png"
                       alt="home"
-                      class="rounded-xl w-full" />
+                      class="rounded-xl w-full sm:h-full" />
                   </figure>
                 </div>
 
 
-                <div class="bg-base-100 rounded-2xl mb-4 sm:flex ">
-                  <figure class="px-8 pt-10">
+                <div class="bg-base-100 rounded-2xl mb-4 sm:flex sm:col-span-3 sm:row-start-2 border">
+                  <figure class="px-8 pt-10 sm:py-4">
                     <img
                       src="assets/img4.png"
                       alt="Shoes"
                       class="rounded-xl w-full sm:h-full" />
                   </figure>
-                  <div class="card-body items-left text-center sm:flex sm:w-1/2 sm:py-4">
+                  <div class="card-body items-left text-center sm:flex sm:w-1/2 sm:py-4 sm:p-0 sm:justify-evenly">
                     <h2 class="card-title font-extrabold text-xl text-left">Commercial</h2>
                     <p class="text-left font-medium text-base text-[#737373] sm:flex-grow-0">The barn house captivates with its blend of rustic charm and modern.</p>
                     <div class="flex justify-start items-center">
@@ -285,12 +285,12 @@
                 </div>
 
 
-                <div class="bg-base-100 rounded-2xl mb-4 w-full">
-                  <figure class="p-4">
+                <div class="bg-base-100 rounded-2xl mb-4 w-full sm:row-start-2 sm:col-start-1 border">
+                  <figure class="p-4 sm:h-full">
                     <img
                       src="assets/img3.png"
                       alt="home"
-                      class="rounded-xl w-full" />
+                      class="rounded-xl w-full sm:h-full" />
                   </figure>
                 </div>
 
