Added FAQ section unique

--- a/index.html
+++ b/index.html
@@ -311,6 +311,44 @@
           </div>
         </section>
 
+        <!-- Unique Q&A section -->
+        <section>
+
+          <h1 class="text-center font-extrabold text-4xl my-8">Frequently Asked Questions(FAQ)</h1>
+          <div class="w-11/12 mx-auto">
+            <div class="collapse collapse-plus bg-base-200 my-4">
+              <input type="radio" name="my-accordion-3" checked="checked" />
+              <div class="collapse-title text-xl font-medium">Can I customize the design of my barn house?</div>
+              <div class="collapse-content">
+                <p>Absolutely! We offer a range of customization options to suit your needs and preferences. From floor plans to finishes, you can work with our design team to create a barn house that truly feels like home.</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus bg-base-200 my-4">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">What materials are used in your barn house designs?</div>
+              <div class="collapse-content">
+                <p>We use a mix of high-quality, sustainable materials that enhance both the aesthetic and durability of our barn houses. Common materials include reclaimed wood, steel, and eco-friendly insulation. Our team will guide you through material choices that best fit your vision and budget.</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus bg-base-200 my-4">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">Do you offer financing options?</div>
+              <div class="collapse-content">
+                <p>We can connect you with financing partners who specialize in custom home construction. We'll work with you to explore financing options that suit your needs and help make your barn house dream a reality.</p>
+              </div>
+            </div>
+
+            <div class="collapse collapse-plus bg-base-200 my-4">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">Do you provide support after the house is built?</div>
+              <div class="collapse-content">
+                <p>Yes, we offer post-construction support to address any questions or issues that may arise. Our goal is to ensure you're completely satisfied with your new home and that it continues to meet your needs for years to come.</p>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <!-- project form section -->
         <section class="bg-[url('assets/bg.jpg')] bg-cover bg-no-repeat mt-1">
 
           <div class="w-11/12 mx-auto flex justify-center items-center flex-col sm:w-8/12">
