made some content text changes

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 
     <main>
 
+      <!-- About us section -->
         <section class="bg-[#F4F4F4]">
 
           <div class="mt-8 w-11/12 mx-auto flex justify-center items-center flex-col sm:flex-row ">
@@ -118,7 +119,7 @@
               <img src="assets/Vector.png" alt="spiral-arrow" class="absolute top-[-2rem] left-[-2rem] hidden sm:inline">
               <button class="btn rounded-full bg-white font-bold text-base mt-8"> <i class="fa-solid fa-arrow-right-long"></i>About Us</i></button>
               <h1 class="font-bold text-2xl text-center sm:text-left text-[#212121] my-4 sm:text-4xl sm:w-3/5" style="-webkit-text-stroke: 1px;">We design thoughtful, liveable spaces</h1>
-              <p class="text-center font-medium text-sm text-[#494949] mb-6 sm:text-left sm:w-3/5">The barn house captivates with its blend of rustic charm and  modern sophistication, featuring weathered wood, sleek metal accents.</p>
+              <p class="text-center font-medium text-sm text-[#494949] mb-6 sm:text-left sm:w-3/5">We create spaces that combine style and functionality, tailored to enhance your daily life. Our designs focus on comfort and practicality, reflecting your unique needs.</p>
               <div class="flex p-5 card-side px-6 bg-base-100 rounded-2xl mb-4 sm:mr-8">
                <figure class="flex items-start sm:items-center min-w-10">
                  <img
@@ -127,7 +128,7 @@
                </figure>
                <div class="card-body p-0 pl-4">
                  <h2 class="card-title font-extrabold text-base text-[#494949]">Commercial</h2>
-                 <p class="font-medium text-base text-[#737373]">The barn house captivates with its blend of rustic charm and modern.</p>
+                 <p class="font-medium text-base text-[#737373]">Innovative designs that elevate your business environment & drive success.</p>
                </div>
               </div>
               <div class="flex p-5 card-side px-6 bg-base-100 rounded-2xl mb-6 sm:mr-8">
@@ -138,7 +139,7 @@
               </figure>
               <div class="card-body p-0 pl-4">
                 <h2 class="card-title font-extrabold text-base text-[#494949]">Residential</h2>
-                <p class="font-medium text-base text-[#737373]">The barn house captivates with its blend of rustic charm and modern.</p>
+                <p class="font-medium text-base text-[#737373]">Creating personalized, comfortable homes that enhance everyday living .</p>
               </div>
               </div>
             </div>
@@ -152,14 +153,14 @@
 
         </section>
 
-
+        <!-- work process section -->
         <section  class="bg-[#F4F4F4]">
 
           <div class="w-11/12 mx-auto flex justify-center items-center flex-col">
 
             <button class="btn rounded-full bg-white font-bold text-base mt-8"> <i class="fa-solid fa-arrow-right-long"></i>How we works</i></button>
             <h1 class="font-bold text-xl text-[#212121] my-4 sm:text-4xl" style="-webkit-text-stroke: 1px;" >Our Works Process</h1>
-            <p class="font-medium text-sm text-[#494949] text-center mb-6 sm:max-w-2xl">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            <p class="font-medium text-sm text-[#494949] text-center mb-6 sm:max-w-2xl">Our process combines detailed planning and creative execution to transform your vision into reality. We meticulously manage each step, ensuring a seamless and successful project from start to finish.</p>
           
             <div class="sm:flex sm:gap-6 sm:mb-24">
 
@@ -172,7 +173,7 @@
                 </figure>
                 <div class="card-body text-left p-0">
                   <h2 class="card-title text-left font-extrabold text-lg text-[#1C1C1C] mt-2">Concept</h2>
-                  <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                  <p>Transforming visionary ideas into functional and inspiring designs.</p>
                 </div>
               </div>
   
@@ -185,7 +186,7 @@
                 </figure>
                 <div class="card-body text-left p-0">
                   <h2 class="card-title text-left font-extrabold text-lg text-[#1C1C1C] mt-2">Design Process</h2>
-                  <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                  <p>A seamless journey from concept to completion, ensuring your vision becomes reality.</p>
                 </div>
               </div>
   
@@ -198,7 +199,7 @@
                 </figure>
                 <div class="card-body text-left p-0">
                   <h2 class="card-title text-left font-extrabold text-lg text-[#1C1C1C] mt-2">Supervision</h2>
-                  <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                  <p>Expert oversight to ensure your project stays on track and meets the highest standards.</p>
                 </div>
               </div>
   
@@ -211,7 +212,7 @@
                 </figure>
                 <div class="card-body text-left p-0">
                   <h2 class="card-title text-left font-extrabold text-lg text-[#1C1C1C] mt-2">Budget Planning</h2>
-                  <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                  <p>Strategic management to maximize value while staying within your financial goals.</p>
                 </div>
               </div>
 
@@ -226,7 +227,7 @@
 
             <button class="btn rounded-full bg-[#ABEF5F]/[.2] font-bold text-base mt-8 border-none sm:mt-24"> <i class="fa-solid fa-arrow-right-long"></i>Explore our Latest works</i></button>
             <h1 class="font-bold text-2xl text-[#212121] my-4 w-4/5 text-center sm:text-5xl" style="-webkit-text-stroke: 1px;" >Our Latest Portfolio</h1>
-            <p class="font-medium text-sm text-[#494949] text-center mb-6 sm:max-w-2xl sm:text-base sm:my-8">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            <p class="font-medium text-sm text-[#494949] text-center mb-6 sm:max-w-2xl sm:text-base sm:my-8">Explore our most recent projects showcasing innovative designs and exceptional craftsmanship.</p>
 
 
               <div class="sm:grid sm:grid-cols-5 sm:grid-rows-2 sm:gap-x-4">
@@ -240,7 +241,7 @@
                   </figure>
                   <div class="card-body items-left text-center sm:flex sm:w-1/2 sm:p-0 sm:py-4 sm:justify-evenly sm:pr-4">
                     <h2 class="card-title font-extrabold text-xl text-left">Commercial</h2>
-                    <p class="text-left font-medium text-base text-[#737373] sm:flex-grow-0 ">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern.</p>
+                    <p class="text-left font-medium text-base text-[#737373] sm:flex-grow-0 ">Our commercial projects captivate with their blend of functionality and modern elegance, tailored to your business environment.</p>
                     <div class="flex justify-start items-center">
                       <button class="btn btn-outline bg-white border-none text-left p-0 font-extrabold text-base">View Details<i class="fa-solid fa-arrow-up-long w-8 h-8  flex justify-center items-center text-black bg-color-primary rounded-full rotate-45"></i></button>
                     </div>
@@ -277,7 +278,7 @@
                   </figure>
                   <div class="card-body items-left text-center sm:flex sm:w-1/2 sm:py-4 sm:p-0 sm:justify-evenly">
                     <h2 class="card-title font-extrabold text-xl text-left">Commercial</h2>
-                    <p class="text-left font-medium text-base text-[#737373] sm:flex-grow-0">The barn house captivates with its blend of rustic charm and modern.</p>
+                    <p class="text-left font-medium text-base text-[#737373] sm:flex-grow-0">Elevating business environments with cutting-edge designs that blend functionality and style.</p>
                     <div class="flex justify-start items-center">
                       <button class="btn btn-outline bg-white border-none text-left p-0 font-extrabold text-base">View Details<i class="fa-solid fa-arrow-up-long w-8 h-8  flex justify-center items-center text-black bg-color-primary rounded-full rotate-45"></i></button>
                     </div>
@@ -355,7 +356,7 @@
 
             <button class="btn rounded-full bg-[#ABEF5F]/[.2] font-bold text-base mt-8 border-none sm:mt-24"> <i class="fa-solid fa-arrow-right-long"></i>Let's Connect</i></button>
             <h1 class="font-bold text-2xl text-[#212121] my-4 w-4/5 text-center sm:text-5xl" style="-webkit-text-stroke: 1px;" >Let's Discuss Next Project</h1>
-            <p class="font-medium text-sm text-[#494949] text-center mb-6 sm:max-w-2xl sm:text-base sm:my-8">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            <p class="font-medium text-sm text-[#494949] text-center mb-6 sm:max-w-2xl sm:text-base sm:my-8">Connect with us to bring your vision to life with tailored design solutions and expert guidance.</p>
 
             <form action="#" class="mb-4 w-full sm:grid sm:grid-cols-2 gap-x-6">
 
@@ -389,7 +390,7 @@
             <a class="font-extrabold ml-2 text-3xl">Rinterio</a>
           </div>
 
-          <p class="font-medium text-base text-[#737373] text-center mb-8 sm:max-w-2xl sm:mx-auto">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+          <p class="font-medium text-base text-[#737373] text-center mb-8 sm:max-w-2xl sm:mx-auto">Discover Rinterio’s innovative designs that seamlessly blend style and functionality for exceptional living and working spaces.</p>
 
           <div class="flex justify-center items-center sm:block sm:max-w-3xl sm:mx-auto">
             <ul class="menu-horizontal px-1 flex-col items-center justify-center sm:flex sm:justify-around sm:flex-row">
